# PIC1

./: README.md
Mathematica/: ExponentialMatrix.nb  IDM_Masses.nb  IDMload.nb  IDMload.nb:Zone.Identifier  Test_18-11_2022.nb  test.nb
docs/Paper/: content.tex  cover.tex  main.tex  preamble.tex  template.tex  toc.tex
docs/Paper/Extras/: help.tex
docs/Paper/Sections/: first.tex  second.tex
project/: CMakeLists.txt  Makefile  STU.cpp  classes.cpp  compile.txt  dconfig  main.cpp  root.cpp  test_write.cpp  typescript
project/data/: Saved.csv  dataTest.par  test.csv
project/data/STU/check/: STU-Bad.csv
project/data/test/: OKStep1.csv
project/include/: FileStream.h  Parameters.h  TestFuncs.h  TheoConstraints.h
project/main/: main.cpp
project/python/: 3Dgraph.py  Constraints.py  ExpCons.py  MCRandom.py  MakePlots.py  Parameters.py  TheoCons.py  graph.py  main.py  oldmain.py  tester.py
project/python/scripts/: constraints.py  randomData.par  script.sh  test.py
project/scripts/: GetOmegas.py  Makefile  MultiPlot.py  Multifigs.py  Omega-MH.py  Omega-laL.py  OmegaMultigraph.py  PlotErrors.py  plotter.py
project/src/: ExpConstraints.cpp  ExpConstraints.h  FileStream.cpp  FileStream.h  Graph.cpp  Graph.h  IDM.cpp  IDM.h  MyRandom.cpp  MyRandom.h  Parameters.cpp  Parameters.h  RootClass.cpp  RootClass.h  SM.cpp  SM.h  StopWatch.cpp  StopWatch.h  TestFuncs.cpp  TheoConstraints.cpp  TheoConstraints.h
project/src/include/: ExpConstraints.h  FileStream.h  Graph.h  IDM.h  RootClass.h  SM.h  TestFuncs.h
project/test/: AnotherPlotter.py  CMakeLists.txt  ExpConstraints.cpp  ExpConstraints.h  FuncPointers.cpp  GraphType.cpp  IDM.h  IDMC.cpp  Makefile  MapClass.cpp  MapGPT_test.cpp  Parameters.cpp  Parameters.h  RootClass.cpp  RootClass.h  TheoConstraints.cpp  TheoConstraints.h  classStruct.cpp  funcmaptest.cpp  funcpointeirs.cpp  matrixes_test.cpp  removeMapPoint.cpp  reviseFirstPlot.cpp  root.cpp  writeParFile.cpp
sample/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ola  ola.cpp
scripts/: randomData.par  test.py
